Bug 106366 - "Open Read-Only" for document in use doesn't give "Edit document" button
Summary: "Open Read-Only" for document in use doesn't give "Edit document" button
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:5.5.0 target:5.4.0.1
Keywords: bibisected, bisected, regression
: 107208 107775 (view as bug list)
Depends on:
Blocks: Infobar-UX Read-Only
  Show dependency treegraph
 
Reported: 2017-03-06 18:58 UTC by Timur
Modified: 2017-07-01 10:48 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2017-03-06 18:58:14 UTC
Description:
With master~2017-03-02_01.57.01_LibreOfficeDev_5.4.0.0.alpha0_Win_x86.
Works with somewhat older.

Steps to Reproduce:
1. Open some file in other program
2. Open the same file in LO master
3. Message: Document file '...docx' is locked for editing by yourself on a different system since 
Open document read-only, or ignore own file locking and open the document for editing.
4. Press Open and file is in read-only mode


Actual Results:  
5. There's no "Edit document" button to go to Edit Mode

Expected Results:
5. There's visible "Edit document" button to go to Edit Mode


Reproducible: Always

User Profile Reset: 

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:38.0) Gecko/20100101 Firefox/38.0
Comment 1 Jacques Guilleron 2017-03-07 15:57:20 UTC
Hi Timur,

Same constat with
LO 5.4.0.0.alpha0+ Build ID: a5c947579253a7f4e784004e18929af5ab22fa28
CPU threads: 2; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2017-03-02_01:57:01
Locale: fr-FR (fr_FR); Calc: CL
No additional windows with "Edit doocument" button.
Was visible in 
LO 5.4.0.0.alpha0+ Build ID: f0c7cbe1d8505d3c1f5a2b2253efda35542c898b
CPU threads: 2; OS: Windows 6.1; UI render: GL; 
TinderBox: Win-x86@39, Branch:master, Time: 2017-02-22_04:35:00
Locale: fr-FR (fr_FR); Calc: CL

Jacques
Comment 2 Xisco Faulí 2017-03-24 23:13:46 UTC
regression introduced by:

author	Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>	2017-02-23 14:12:34 (GMT)
committer	Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>	2017-02-23 15:35:33 (GMT)
commit aa8efc72d43c2000cb3b5571fdc6b48617eb9b94 (patch)
tree e6c7df22af47e2d14fbfa3d4970b1c8586530e3b
parent 544104b957e72cfb5701cd949bca5184324d20ed (diff)
tdf#101652 No infobar when doc attr is readonly
One can set the a document attribute to open the doc read-only.
In this case the read-only infobar should not be shown.

bisected with bibisect-linux-64-5.4.

Adding Cc: to Samuel Mehrbrodt
Comment 3 Xisco Faulí 2017-05-11 15:50:56 UTC
*** Bug 107775 has been marked as a duplicate of this bug. ***
Comment 4 Yousuf Philips (jay) (retired) 2017-05-11 18:50:07 UTC
(In reply to Timur from comment #0)
> 4. Press Open and file is in read-only mode

Pressing the 'Open' button and not the 'Open Read-Only' shouldnt open the document in read only mode, but pressing 'Open Read-Only' no longer shows the infobar, which is the regression.
Comment 5 Telesto 2017-05-12 15:06:45 UTC
*** Bug 107208 has been marked as a duplicate of this bug. ***
Comment 6 Telesto 2017-05-12 15:09:14 UTC
(In reply to Telesto from comment #5)
> *** Bug 107208 has been marked as a duplicate of this bug. ***

Document is in read-only mode stays behind after clicking Edit Document when opening a read only DOC file
Comment 7 Commit Notification 2017-06-08 10:48:35 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=630186ff4e0eba7317e542f8c3eca39ebd068721

tdf#106366 Show infobar for all read-only documents

It will be available in 5.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Samuel Mehrbrodt 2017-06-08 10:50:42 UTC
(In reply to Commit Notification from comment #7)
> Samuel Mehrbrodt committed a patch related to this issue.
> It has been pushed to "master":
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=630186ff4e0eba7317e542f8c3eca39ebd068721
> 
> tdf#106366 Show infobar for all read-only documents

Please try if this patch does improve things.
If it does, I can backport it to 5.4.
Comment 9 Timur 2017-06-09 09:56:12 UTC
Looks fine to me. Please backport.
Comment 10 Commit Notification 2017-06-16 13:08:57 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=66ef0206967c5b0452fafe4fe75aa8d7f439f5f4&h=libreoffice-5-4

tdf#106366 Show infobar for all read-only documents

It will be available in 5.4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.