tdf#106366 Show infobar for all read-only documents

Except those who were set open r/o with the File->Properties checkbox

Change-Id: Id44daac364cae73636b6f1c051521928743b88f4
Reviewed-on: https://gerrit.libreoffice.org/36258
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>
Tested-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>